--- a/features.html
+++ b/features.html
@@ -23,7 +23,7 @@ html{direction:rtl}body{direction:rtl}.flip.text-left{text-align:right}.flip.tex
 <section id="header">
 <nav class="navbar navbar-default">
 <div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display -->
-<div class="navbar-header"><button aria-expanded="false" class="navbar-toggle collapsed" data-target="#main-bar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span></button><a class="navbar-brand" href="index.html#">تفصيل وتنجيد كنب</a></div>
+<div class="navbar-header"><button aria-expanded="false" class="navbar-toggle collapsed" data-target="#main-bar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span></button><a class="navbar-brand" href="index.html#">مميزاتنا</a></div>
 <!-- Collect the nav links, forms, and other content for toggling -->
 
 <div class="collapse navbar-collapse" id="main-bar">
@@ -229,10 +229,9 @@ $(window).resize(function(){if($(window).width()>992){callUs.attr("href",["#last
         </script>
 
 <p></p>
-
 <!-- fixed footer -->
 
- <ul class="fixedNav">
+<ul class="fixedNav">
 	<li>
 	   <a href="/">الرئيسيه</a>
 	</li>
